[gd_scene load_steps=30 format=2]

[ext_resource path="res://title_screen/title/title_scene.tscn" type="PackedScene" id=1]
[ext_resource path="res://title_screen/title_screen.gd" type="Script" id=2]
[ext_resource path="res://ui/default_theme.tres" type="Theme" id=3]
[ext_resource path="res://title_screen/tutorial/tutorial_scene.tscn" type="PackedScene" id=4]
[ext_resource path="res://title_screen/settings/settings_scene.tscn" type="PackedScene" id=5]
[ext_resource path="res://title_screen/credits/credits_scene.tscn" type="PackedScene" id=6]
[ext_resource path="res://ui/fader.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/sound/ahoy_mate.ogg" type="AudioStream" id=8]
[ext_resource path="res://assets/art/background1.png" type="Texture" id=9]
[ext_resource path="res://assets/art/ocean.png" type="Texture" id=10]
[ext_resource path="res://assets/art/background2.png" type="Texture" id=11]
[ext_resource path="res://assets/art/ocen_top.png" type="Texture" id=12]
[ext_resource path="res://assets/art/background.png" type="Texture" id=13]
[ext_resource path="res://game_screen/parallax.gd" type="Script" id=14]

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 12 )
region = Rect2( 0, 0, 960, 73 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 12 )
region = Rect2( 0, 73, 960, 73 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 12 )
region = Rect2( 0, 146, 960, 73 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 12 )
region = Rect2( 0, 219, 960, 73 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 12 )
region = Rect2( 0, 292, 960, 73 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 12 )
region = Rect2( 0, 365, 960, 73 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 12 )
region = Rect2( 0, 438, 960, 73 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 12 )
region = Rect2( 0, 511, 960, 73 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 12 )
region = Rect2( 0, 584, 960, 73 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 12 )
region = Rect2( 0, 657, 960, 73 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 12 )
region = Rect2( 0, 730, 960, 73 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 12 )
region = Rect2( 0, 803, 960, 73 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 12 )
region = Rect2( 0, 876, 960, 73 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 12 )
region = Rect2( 0, 949, 960, 73 )

[sub_resource type="SpriteFrames" id=35]
animations = [ {
"frames": [ SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ) ],
"loop": true,
"name": "default",
"speed": 8.0
} ]

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleScene" parent="." instance=ExtResource( 1 )]

[node name="TitleImage" parent="TitleScene" index="0"]
margin_right = 170.0

[node name="NewGameButton" parent="TitleScene" index="1"]
margin_right = 170.0
margin_bottom = 172.0

[node name="SettingsButton" parent="TitleScene" index="2"]
margin_top = 176.0
margin_right = 170.0
margin_bottom = 216.0

[node name="TutorialButton" parent="TitleScene" index="3"]
margin_top = 220.0
margin_right = 170.0
margin_bottom = 260.0

[node name="CreditsButton" parent="TitleScene" index="4"]
margin_top = 264.0
margin_right = 170.0
margin_bottom = 304.0

[node name="QuitButton" parent="TitleScene" index="5"]
margin_top = 308.0
margin_right = 170.0
margin_bottom = 348.0

[node name="CreditsScene" parent="." instance=ExtResource( 6 )]
visible = false

[node name="SettingsScene" parent="." instance=ExtResource( 5 )]
visible = false

[node name="TutorialScene" parent="." instance=ExtResource( 4 )]
visible = false

[node name="AnimatedSprite" parent="TutorialScene/PanelContainer/Slide1" index="0"]
frame = 0

[node name="Fader" parent="." instance=ExtResource( 7 )]
audio_player = NodePath("../SoundtrackPlayer")

[node name="SoundtrackPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
autoplay = true
bus = "Music"

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
script = ExtResource( 14 )
speed = 20.0

[node name="ParallaxLayer3" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0, 0 )

[node name="Background" type="Sprite" parent="ParallaxBackground/ParallaxLayer3"]
position = Vector2( 0, -54 )
scale = Vector2( 1, 1.24259 )
texture = ExtResource( 13 )
centered = false

[node name="OceanTop" type="AnimatedSprite" parent="ParallaxBackground/ParallaxLayer3"]
frames = SubResource( 35 )
frame = 4
playing = true
centered = false

[node name="Ocean" type="Sprite" parent="ParallaxBackground/ParallaxLayer3"]
texture = ExtResource( 10 )
centered = false
offset = Vector2( 0, 73 )

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2( 0, 284 )
motion_scale = Vector2( 0.75, 0 )
motion_offset = Vector2( 2, 0 )
motion_mirroring = Vector2( 1024, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer2"]
texture = ExtResource( 11 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 1024, 256 )

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2( 0, 450 )
motion_scale = Vector2( 1.1, 0 )
motion_mirroring = Vector2( 1024, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
texture = ExtResource( 9 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 1024, 90 )

[connection signal="pressed" from="TitleScene/NewGameButton" to="." method="_on_NewGameButton_pressed"]
[connection signal="pressed" from="TitleScene/SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="TitleScene/TutorialButton" to="." method="_on_TutorialButton_pressed"]
[connection signal="pressed" from="TitleScene/CreditsButton" to="." method="_on_CreditsButton_pressed"]
[connection signal="pressed" from="TitleScene/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="pressed" from="CreditsScene/BackToTitleButton" to="." method="_on_BackToTitleButton_pressed"]
[connection signal="pressed" from="SettingsScene/VBoxContainer/BackToTitleButton" to="." method="_on_BackToTitleButton_pressed"]
[connection signal="pressed" from="TutorialScene/Controls/BackToTitleButton" to="." method="_on_BackToTitleButton_pressed"]

[editable path="TitleScene"]
[editable path="CreditsScene"]
[editable path="SettingsScene"]
[editable path="TutorialScene"]
